--- a/index.html
+++ b/index.html
@@ -484,11 +484,14 @@
 		 
 
 		<script src="js/vendor/jquery-1.10.1.min.js"></script>
-		<script src="js/vendor/angular.min.js" type="text/javascript"></script>
+		<script src="js/vendor/angular-resource.min.js"></script>
+	 
+		<script src="js/vendor/angular.js" type="text/javascript"></script>
 		<script src="js/vendor/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>	
         <script src="js/vendor/bootstrap.min.js"></script>
 		<script src="js/vendor/jquery.ascensor.min.js" type="text/javascript"></script>	
- 
+     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-route.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-resource.js"></script>
  
  
 
